--- a/index.html
+++ b/index.html
@@ -591,14 +591,14 @@
                 </div>
             </div>
 
-            <button class="btn btn-quiz" onclick="calcularQuiz()">Ver Meu Match</button>
+            <button class="btn btn-quiz" onclick="calcularQuiz(); return false;">Ver Meu Match</button>
         </section>
 
         <!-- RESULTADO QUIZ -->
         <div class="quiz-result" id="quizResult">
             <h3>Seu Match Ideal:</h3>
             <p id="resultMessage"></p>
-            <a href="https://wa.me/5541987516166?text=Descobri meu match ideal! Gostaria de saber mais e agendar uma sessão diagnóstica" class="btn btn-primary" target="_blank">Agendar Diagnóstico Gratuito</a>
+            <a href="" class="btn btn-primary" target="_blank">Agendar Diagnóstico Gratuito</a>
         </div>
 
         <!-- SEÇÃO 3: CARDS -->
