--- a/index.html
+++ b/index.html
@@ -436,14 +436,12 @@
                     <h3>Raízes & Visão</h3>
                     <p class="card-subtitle">Estabilidade + Propósito</p>
                     <div class="card-meta">
-                        <span>8 sessões</span>
                         <span>Profundidade</span>
                     </div>
                     <ul class="card-features">
                         <li>Organização mental e emocional</li>
                         <li>Visão de futuro clara</li>
                         <li>Acompanhamento diário</li>
-                        <li>R$ 2.497</li>
                     </ul>
                     <button class="btn-card" onclick="window.open('https://wa.me/5541987516166?text=Gostaria de saber mais sobre Raízes e Visão', '_blank')">Conhecer</button>
                 </div>
@@ -452,14 +450,12 @@
                     <h3>Método V.I.V.A</h3>
                     <p class="card-subtitle">Do Caos à Execução</p>
                     <div class="card-meta">
-                        <span>12 semanas</span>
                         <span>Premium</span>
                     </div>
                     <ul class="card-features">
                         <li>Visão → Identidade → Vontade → Ação</li>
                         <li>4 pilares integrados</li>
                         <li>Resultados tangíveis</li>
-                        <li>R$ 4.497</li>
                     </ul>
                     <button class="btn-card" onclick="window.open('https://wa.me/5541987516166?text=Gostaria de saber mais sobre Método V.I.V.A', '_blank')">Conhecer</button>
                 </div>
@@ -468,14 +464,12 @@
                     <h3>Reposicionamento Profissional</h3>
                     <p class="card-subtitle">Estabilidade + Liberdade</p>
                     <div class="card-meta">
-                        <span>3 meses</span>
                         <span>Estratégia</span>
                     </div>
                     <ul class="card-features">
-                        <li>Entrada em grandes empresas</li>
+                        <li>Conquista de vagas específicas em empresas</li>
                         <li>Estratégia de carreira</li>
                         <li>Base para empreender depois</li>
-                        <li>R$ 2.400</li>
                     </ul>
                     <button class="btn-card" onclick="window.open('https://wa.me/5541987516166?text=Gostaria de saber mais sobre Reposicionamento Profissional', '_blank')">Conhecer</button>
                 </div>
@@ -518,7 +512,7 @@
     </div>
 
     <footer>
-        <p><strong>Mayga Caroliny Santos</strong></p>
+        <p><strong>Mayga Caroliny dos Santos</strong></p>
         <p>Especialista em Desenvolvimento Humano | Neurociência do Desenvolvimento (PUC/RS)</p>
         <p>12+ anos em grandes corporações</p>
         
