--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
                         <span>Premium</span>
                     </div>
                     <ul class="card-features">
-                        <li>Visão → Identidade → Vontade → Ação</li>
+                        <li>Visão, Identidade, Vontade, Ação</li>
                         <li>4 pilares integrados</li>
                         <li>Resultados tangíveis</li>
                     </ul>
@@ -466,7 +466,7 @@
                         <span>Estratégia</span>
                     </div>
                     <ul class="card-features">
-                        <li>Conquista de vagas específicas em empresas</li>
+                        <li>Conquiste vagas específicas </li>
                         <li>Estratégia de carreira</li>
                         <li>Base para empreender depois</li>
                     </ul>
