--- a/index.html
+++ b/index.html
@@ -420,13 +420,14 @@
                 <div class="card">
                     <h3>Mentoria Momentum</h3>
                     <p class="card-subtitle">Resultado em 30 Dias</p>
+                    <span>Agilidade</span>
                     <div class="card-meta">
 
                     </div>
                     <ul class="card-features">
                         <li>Clareza mental + Propósito</li>
                         <li>Plano executável</li>
-                        <li>Suporte via WhatsApp</li>
+                        <li>Reposicionamento de marca</li>
                     </ul>
                     <button class="btn-card" onclick="window.open('https://wa.me/5541987516166?text=Gostaria de saber mais sobre Mentoria Momentum', '_blank')">Conhecer</button>
                 </div>
