--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
                     </div>
                     <ul class="card-features">
                         <li>Visão, Identidade, Vontade, Ação</li>
-                        <li>4 pilares integrados</li>
+                        <li>Estruturar projeto ou MVP</li>
                         <li>Resultados tangíveis</li>
                     </ul>
                     <button class="btn-card" onclick="window.open('https://wa.me/5541987516166?text=Gostaria de saber mais sobre Método V.I.V.A', '_blank')">Conhecer</button>
