--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
                 <div class="card">
                     <h3>Mentoria Momentum</h3>
                     <p class="card-subtitle">Resultado em 30 Dias</p>
-                    <span>Agilidade</span>
+                    <p class="card-subtitle">Agilidade</p>
                     <div class="card-meta">
 
                     </div>
