--- a/index.html
+++ b/index.html
@@ -350,6 +350,8 @@
                 <button class="btn btn-primary" onclick="mostrarSecao('quiz')">Fazer Teste (30 seg)</button>
                 <button class="btn btn-secondary" onclick="mostrarSecao('cards')">Ver as 4 Mentorias</button>
                 <a href="https://wa.me/5541987516166?text=Olá, vim pelo link da bio do Instagram." class="btn btn-secondary" target="_blank">WhatsApp</a>
+               <button class="btn btn-secondary" onclick="mostrarSecao('faq')">Dúvidas Frequentes</button>
+
             </div>
         </section>
 
