--- a/index.html
+++ b/index.html
@@ -559,19 +559,19 @@
 
             if (q2 === 'procrastinacao' || q3 === '30') {
                 titulo = 'Mentoria Momentum';
-                mensagem = 'Você precisa de resultado rápido. Momentum é sua porta de entrada: 4 semanas de clareza e execução. R$ 797/mês.';
+                mensagem = 'Você precisa de resultado rápido. Momentum é sua porta de entrada: 4 semanas de clareza e execução.';
                 link = 'https://wa.me/5541987516166?text=Descobri meu match: Mentoria Momentum!';
             } else if ((q2 === 'execucao' || q2 === 'clareza') && q3 === '3') {
                 titulo = 'Método V.I.V.A';
-                mensagem = 'Você tem ideia clara mas está emperrado. V.I.V.A é seu programa: 12 semanas estruturadas. R$ 4.497.';
+                mensagem = 'Você tem ideia clara mas está emperrado. V.I.V.A é seu programa: 12 semanas estruturadas.';
                 link = 'https://wa.me/5541987516166?text=Descobri meu match: Método V.I.V.A!';
             } else if (q2 === 'clareza' && (q1 === 'nao' || q1 === 'parcial')) {
                 titulo = 'Raízes & Visão';
-                mensagem = 'Você precisa de clareza emocional + propósito profundo. Raízes & Visão é ideal: 8 sessões. R$ 2.497.';
+                mensagem = 'Você precisa de clareza emocional + propósito profundo. Raízes & Visão é ideal: 8 sessões.';
                 link = 'https://wa.me/5541987516166?text=Descobri meu match: Raízes e Visão!';
             } else if (q2 === 'carreira') {
                 titulo = 'Reposicionamento Profissional';
-                mensagem = 'Você está em transição. Reposicionamento é seu programa: 3 meses de estratégia. R$ 2.400.';
+                mensagem = 'Você está em transição. Reposicionamento é seu programa: 3 meses de estratégia.';
                 link = 'https://wa.me/5541987516166?text=Descobri meu match: Reposicionamento Profissional!';
             } else {
                 titulo = 'Momentum ou Raízes & Visão';
